z-index issue

--- a/content.css
+++ b/content.css
@@ -226,6 +226,10 @@ section.clone {
   cursor: pointer;
 }
 
+.content .below-the-fold {
+  z-index: 1;
+}
+
 
 .content {
   position: relative;
